# CI-CD-Test

./: .flake8  .releaserc.json  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: python-app.yml
codes/: calc.py  hellosz.py  test_calc.py
src/py_calculator/: calc.py  hellosz.py
tests/: test_calc.py
